<resources>
    <string name="app_name">Calorie Calculator</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="enterHeight">Enter Height(cm)</string>
    <string name="enterWeight">Enter Weight(kg)</string>
    <string name="enterAge">Enter Age</string>
    <string name="BtnNext">Next</string>
    <string name="gender">Gender:</string>
    <string name="add">Add</string>
    <string name="loading">Loading…</string>
    <string name="age">Age:</string>
    <string name="weight">Weight(kg):</string>
    <string name="height">Height(cm):</string>
    <string name="ad_attribution">Ad</string>
    <string name="skip">Skip</string>
    <string name="back">Back</string>
    <string name="editMeasurementsTitle">Edit your measurements</string>
    <string name="addNewMealTitle">Add new meal to menu</string>
    <string name="addButtonTitle">Click to access the menu</string>
    <string name="addButtonText">To access the menu list of dishes just click ths button.</string>
    <string name="addNewMealText">You can always add a meal manually by clicking this button.</string>
    <string name="editMeasurementsText">You can easily edit your measurements by clicking this button.</string>
    <string name="get_started">Nutrition counting\nsimplified.</string>
    <string name="btnGetStarted">Get Started</string>
    <string name="activeText">How often do you work out?</string>
    <string name="notActive">Not working out</string>
    <string name="slightActive">Slightly active (1–3 days a week)</string>
    <string name="active">Active (3–5 days a week)</string>
    <string name="superActive">Super active (6–7 days a week)</string>
    <string name="toMaintain">To maintain weight</string>
    <string name="toLose">To lose weight</string>
    <string name="toGain">To gain weight</string>
    <string name="total">TOTAL</string>
    <string name="menu">Menu</string>
    <string name="chicken_salad">Chicken Salad</string>
    <string name="beef_steak">Beef Steak</string>
    <string name="vegetable_stir_fry">Vegetable Stir Fry</string>
    <string name="protein_shake">Protein Shake</string>
    <string name="grilled_salmon">Grilled Salmon</string>
    <string name="cancel">Cancel</string>
    <string name="years">years</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="kcal_per_day">kcal/day</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="kcal">\nkcal</string>
    <string name="g_fats">g\nfats</string>
    <string name="g_carbs">g\ncarbs</string>
    <string name="g_proteins">g\nproteins</string>
    <string name="kcal1">kcal</string>
    <string name="g_fats1">g\nfats</string>
    <string name="g_carbs1">g\ncarbs</string>
    <string name="g_proteins1">g\nproteins</string>
    <string name="error_empty">Can\'t be empty</string>
    <string name="error_invalid_number">Invalid number</string>
    <string name="error_zero">Can\'t be zero</string>
    <string name="select_meal">Please select a meal.</string>
    <string name="select_meal_delete">Please select a meal.</string>
    <string name="error_name_empty">Name can\'t be empty</string>
    <string name="error_name_numeric">Name can\'t be a number</string>
    <string name="error_fats_empty">Fats can\'t be empty</string>
    <string name="error_fats_exceed">There isn\'t food with more than 100g fat</string>
    <string name="error_carbs_empty">Carbs can\'t be empty</string>
    <string name="error_carbs_exceed">There isn\'t food with more than 100g carbs</string>
    <string name="error_proteins_empty">Proteins can\'t be empty</string>
    <string name="error_proteins_exceed">There isn\'t food with more than 90g protein</string>
    <string name="title_add_new">Add new meal to the menu</string>
    <string name="meal_name">meal\'s/drink\'s name</string>
    <string name="meal_fats">fats per 100 g/ml</string>
    <string name="meal_carbs">carbs per 100 g/ml</string>
    <string name="meal_proteins">proteins per 100 g/ml</string>
    <string name="meal_type_meal">Meal</string>
    <string name="meal_type_drink">Drink</string>
    <string name="g">g</string>
    <string name="ml">ml</string>
    <string name="select_gender">Please select gender</string>
    <string name="select_activity_level">Please select Activity level</string>
    <string name="error_height_empty">Can\'t be empty</string>
    <string name="error_height_invalid">Invalid input</string>
    <string name="error_height_zero_negative">Can\'t be zero or negative</string>
    <string name="error_height_range">Must be between 40 cm and 250 cm</string>
    <string name="error_weight_empty">Can\'t be empty</string>
    <string name="error_weight_invalid">Invalid input</string>
    <string name="error_weight_zero_negative">Can\'t be zero or negative</string>
    <string name="error_weight_exceed">Can\'t be more than 600 kg</string>
    <string name="error_age_empty">Can\'t be empty</string>
    <string name="error_age_invalid">Invalid input</string>
    <string name="error_age_zero_negative">Can\'t be zero or negative</string>
    <string name="error_age_exceed">Can\'t be older than 116 years</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="select_category">Please select category - Breakfast, Lunch, Dinner</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="breakfastAdd">Add your breakfast by clicking the +</string>
    <string name="lunchAdd">Add your lunch by clicking the +</string>
    <string name="dinnerAdd">Add your dinner by clicking the +</string>
</resources>