<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewMealToMenu"
    android:orientation="vertical"
    android:padding="16dp"

    android:background="@color/RecipeCard">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/MyFitnessDefault">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtAddToMenu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/title_add_new"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="12dp"
        android:layout_margin="6dp"
        android:background= "@color/gray"
        android:src="@drawable/eating"/>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/editText_add_meal_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/MyFitnessDefault"
            android:textAlignment="center"
            android:hint="@string/meal_name"
            android:ems="10"
            android:padding="6dp"
            android:maxLength="16"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/editText_add_meal_fats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/MyFitnessDefault"
            android:textAlignment="center"
            android:hint="@string/meal_fats"
            android:inputType="number"
            android:ems="10"
            android:padding="6dp"
            android:maxLength="3"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/editText_add_meal_carbs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/MyFitnessDefault"
            android:textAlignment="center"
            android:hint="@string/meal_carbs"
            android:inputType="number"
            android:ems="10"
            android:padding="6dp"
            android:textSize="18sp"
            android:maxLength="3"
            android:textAllCaps="false"
            android:textStyle="italic"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="8dp"
        android:background="@android:color/transparent">
        <EditText
            android:id="@+id/editText_add_meal_proteins"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/MyFitnessDefault"
            android:textAlignment="center"
            android:padding="6dp"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/meal_proteins"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:maxLength="3"
            android:textStyle="italic"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"/>
    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioGroupType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:padding="4dp">
        <RadioButton
            android:id="@+id/radioMeal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:text="@string/meal_type_meal"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioDrink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/meal_type_drink"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </RadioGroup>
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/gray"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:onClick="btnCancelClick"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="32dp"
            android:layout_toRightOf="@id/button_cancel"
            android:onClick="btnAddClick"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/gray"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <com.google.android.ads.nativetemplates.TemplateView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:gnt_template_type="@layout/gnt_small_template_view"
            android:id="@+id/nativeAdTemplate"/>
    <com.google.android.gms.ads.nativead.MediaView
        android:id="@+id/ad_media"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nativeAdTemplate" />
</RelativeLayout>
</LinearLayout>